--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "author": "\"Abdul Wahab Amar\"",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "colors": "^1.4.0",
