--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,15 +1,36 @@
 
 {
-    "compilerOptions": {
-      // ...
-      "baseUrl": ".",
-      "paths": {
-        "@/*": [
-          "./src/*"
-        ]
-      }
-      // ...
+  "compilerOptions": {
+    // ...
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
     }
+    // ...
   }
-  
+}
+
+
+
+
+
+// {
+//     "files": [],
+//     "references": [
+//       {
+//         "path": "./jsconfig.app.json"
+//       },
+//       {
+//         "path": "./jsconfig.node.json"
+//       }
+//     ],
+//     "compilerOptions": {
+//       "baseUrl": ".",
+//       "paths": {
+//         "@/*": ["./src/*"]
+//       }
+//     }
+//   }
   
